--- a/index.html
+++ b/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Online?</title>
+    <meta name="yandex-verification" content="32eeb7c2a3d06f33" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Эмиль Янгиров</title>
+
+    <meta property="og:url" content="https://yangirov.ru" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/images/photo.jpg" />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="500" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:title" content="Эмиль Янгиров" />
+    <meta property="og:locale" content="ru" />
+    <meta property="og:site_name" content="Эмиль Янгиров" />
+    <meta property="og:description" content="Фулстек-разработчик в Ренессанс Страхование, тот еще музыкант и гастроэстет." />
+    
+    <link rel="icon" type="image/png" href="/images/photo.jpg" />
+    <link rel="canonical" href="https://yangirov.ru" />
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <p>Welcome to hell 😘</p>
+    <div class="container">
+        <header class="header">
+            <img
+                class="header_photo"
+                src="images/photo.jpg"
+                alt="Фото Эмиля Янгирова"
+            />
+            <div class="header_text">
+                <h1 class="header_title">Эмиль Янгиров</h1>
+                <p class="header_subtitle">Фулстек-разработчик в <a class="link" rel="noopener noreferrer nofollow" href="https://renins.com" rel="noopener noreferrer nofollow">Ренессанс Страхование</a>, тот еще музыкант и гастроэстет. 👽</p>
+            </div>
+        </header>
+    
+        <main class="content">
+            <ul class="content_contacts">
+                <li class="contacts_item link">
+                    <a rel="me" href="mailto:emil@yangirov.ru">Почта</a>
+                </li>
+                <li class="contacts_item link">
+                    <a rel="me" href="https://github.com/yangirov">Гитхаб</a>
+                </li>
+                <li class="contacts_item link">
+                    <a rel="me" href="https://twitter.com/emil_yangirov">Твиттер</a>
+                </li>
+                <li class="contacts_item link">
+                    <a rel="me" href="https://t.me/yangirov">Телеграм</a>
+                </li>
+                <li class="contacts_item link">
+                    <a rel="me" href="https://career.habr.com/izzypizzy">Резюме</a>
+                </li>
+            </ul>
+        </main>
+    </div>
 </body>
 </html>
