--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a rel="me" href="https://t.me/yangirov">Телеграм</a>
                 </li>
                 <li class="contacts_item link">
-                    <a rel="me" href="https://career.habr.com/izzypizzy">Резюме</a>
+                    <a rel="me" href="https://career.habr.com/emil-yangirov">Резюме</a>
                 </li>
             </ul>
         </main>
